<resources>
    <string name="app_name">ScribblePad</string>
    <string name="backBtn">Back</string>
    <string name="radio1">Blue</string>
    <string name="radio2">Green</string>
    <string name="radio3">Red</string>
    <string name="radio4">Yellow</string>
    <string name="radio5">Black</string>
    <string name="thickness">Line Thickness</string>
    <string name="clearBtn">Clear</string>
    <string name="Settings">Settings</string>
</resources>
